# NXP_RoboLearn

./: CMakeLists.txt  README.md  esp32_receiver.ino  installation_guide.rst  mimxrt1064_evk.overlay  mimxrt1064_evk_working.overlay  prj.conf  proj.conf  remote_control.ino  remote_oled.ino  sketch_may20a.ino  spi_slave.ino  zephyr-windows.code-workspace
AHT40/include/: aht40.h
AHT40/src/: aht40.cpp  main_aht40.cpp
ISR_Api/: main.cpp
NRF24L01/include/: nrf24.h
NRF24L01/src/: main.cpp  nrf24.cpp
NRF24_IRQ/include/: nrf24.h
NRF24_IRQ/src/: main.cpp  nrf24.cpp
NRF24_send_test/include/: nrf24.h
NRF24_send_test/src/: main.cpp  nrf24.cpp
Projects/Button_interrupt/: main.cpp
Projects/DC_motor/include/: engine.h
Projects/DC_motor/src/: engine.cpp  main.cpp
Projects/LED_hardware_timer/: main.cpp
Projects/LED_pwm/: main.cpp
Projects/NRF24/include/: nrf24.h
Projects/NRF24/src/: main.cpp  nrf24.cpp
Projects/NRF24_example/include/: nrf24.h
Projects/NRF24_example/src/: main.cpp  nrf24.cpp
Proximity_alert/include/: datapacket.h  engine.h  hc-sr04.h  hcsr04.h  nrf24.h
Proximity_alert/src/: engine.cpp  hc-sr04.cpp  hcsr04.cpp  main.cpp  nrf24.cpp
Remote_control/include/: engine.h  nrf24.h
Remote_control/src/: engine.cpp  main.cpp  nrf24.cpp
SPI_Test/: main.cpp
images/: sketch.fzz
src/: main.cpp  main_aht40.cpp  main_button.cpp  main_gpio.cpp  main_hcsr04.cpp  main_st1140.cpp
